--- a/src/P1_BLINKING_LED/Debug/makefile
+++ b/src/P1_BLINKING_LED/Debug/makefile
@@ -23,24 +23,24 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-EMS_P1.elf \
+P1.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-EMS_P1.list \
+P1.list \
 
 OBJCOPY_BIN += \
-EMS_P1.bin \
+P1.bin \
 
 
 # All Target
-all: EMS_P1.elf secondary-outputs
+all: P1.elf secondary-outputs
 
 # Tool invocations
-EMS_P1.elf: $(OBJS) $(USER_OBJS) /home/ros/Desktop/EmbeddedSoftwareSS20/src/P1/STM32F767ZITX_FLASH.ld
-	arm-none-eabi-gcc -o "EMS_P1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"/home/ros/Desktop/EmbeddedSoftwareSS20/src/P1/STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EMS_P1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+P1.elf: $(OBJS) $(USER_OBJS) /home/ros/Desktop/EmbeddedSoftwareSS20/src/STM32F407VGTX_FLASH.ld
+	arm-none-eabi-gcc -o "P1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/ros/Desktop/EmbeddedSoftwareSS20/src/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="P1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -49,13 +49,13 @@ default.size.stdout: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-EMS_P1.list: $(EXECUTABLES)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "EMS_P1.list"
+P1.list: $(EXECUTABLES)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "P1.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-EMS_P1.bin: $(EXECUTABLES)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "EMS_P1.bin"
+P1.bin: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "P1.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
