--- a/src/Debug/makefile
+++ b/src/Debug/makefile
@@ -8,8 +8,13 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include Startup/subdir.mk
--include Src/subdir.mk
+-include P2/Startup/subdir.mk
+-include P2/Src/subdir.mk
+-include P1_BLINKING_LED/Startup/subdir.mk
+-include P1_BLINKING_LED/Src/subdir.mk
+-include P1_BLINKING_LED/Debug/Startup/subdir.mk
+-include P1_BLINKING_LED/Debug/Src/subdir.mk
+-include P1_BLINKING_LED/Debug/subdir.mk
 -include subdir.mk
 -include objects.mk
 
@@ -23,24 +28,24 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-P2.elf \
+P1.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-P2.list \
+P1.list \
 
 OBJCOPY_BIN += \
-P2.bin \
+P1.bin \
 
 
 # All Target
-all: P2.elf secondary-outputs
+all: P1.elf secondary-outputs
 
 # Tool invocations
-P2.elf: $(OBJS) $(USER_OBJS) /home/ros/Desktop/EmbeddedSoftwareSS20/src/P2/STM32F407VGTX_FLASH.ld
-	arm-none-eabi-gcc -o "P2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/ros/Desktop/EmbeddedSoftwareSS20/src/P2/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="P2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+P1.elf: $(OBJS) $(USER_OBJS)
+	arm-none-eabi-gcc -o "P1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 --specs=nosys.specs -Wl,-Map="P1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -49,13 +54,13 @@ default.size.stdout: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-P2.list: $(EXECUTABLES)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "P2.list"
+P1.list: $(EXECUTABLES)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "P1.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-P2.bin: $(EXECUTABLES)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "P2.bin"
+P1.bin: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "P1.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
